--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="force-rendering" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>个人主页</title>
+    <title>StarCloud</title>
     <!-- jQuery -->
     <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.5.1/jquery.min.js"></script>
     <!-- 引入样式 -->
@@ -54,7 +54,7 @@
                 <div class="inner three"></div>
             </div>
             <div class="loading-word">
-                <p class="loading-title">零度的个人主页</p>
+                <p class="loading-title">StarCloud</p>
                 <span id="loading-text">加载中</span>
             </div>
         </div>
@@ -76,8 +76,8 @@
                             <div class="main-img">
                                 <img src="./img/icon/logo.png" alt="img">
                                 <div class="img-title">
-                                    <span class="img-title">new</span>
-                                    <span class="img-text">.starn.cc</span>
+                                    <span class="img-title">new.starn</span>
+                                    <span class="img-text">.cc</span>
                                 </div>
                             </div>
                             <!--介绍信息-->
@@ -93,18 +93,11 @@
                                 <a href="#" class="link" id="github" target="_blank">
                                     <i class="iconfont icon-github"></i>
                                 </a>
-                                <a href="http://wpa.qq.com/msgrd?v=3&uin=10001&site=qq&menu=yes" class="link"
-                                    id="qq" target="_blank">
-                                    <i class="iconfont icon-QQ"></i>
-                                </a>
-                                <a href="mailto:10001@qq.com" class="link" id="email">
+                                <a href="mailto:uussrngk@gmail.com" class="link" id="email">
                                     <i class="iconfont icon-youxiang"></i>
                                 </a>
                                 <a href="#" class="link" id="telegram" target="_blank">
                                     <i class="iconfont icon-telegram"></i>
-                                </a>
-                                <a href="#" class="link" id="twitter" target="_blank">
-                                    <i class="iconfont icon-twitter"></i>
                                 </a>
                                 <a id="link-text">通过这里联系我</a>
                             </div>
@@ -112,7 +105,7 @@
                     </div>
                     <!--第二屏 Logo-->
                     <div class="logo cards" style="display: none" id="changemore">
-                        <a class="logo-text">112zyw.cn</a>
+                        <a class="logo-text">new.starn.cc</a>
                     </div>
                     <div class="col right">
                         <div class="main-right">
@@ -130,7 +123,7 @@
                                         <div class="hitokoto-all">
                                             <div class="hitokoto-text"><span id="hitokoto_text">每一个人都应该明确自己的方向和位置</span>
                                             </div>
-                                            <div class="hitokoto-from">-「&nbsp;<span id="from_text">零度</span>&nbsp;」
+                                            <div class="hitokoto-from">-「&nbsp;<span id="from_text">StarCloud</span>&nbsp;」
                                             </div>
                                         </div>
                                     </div>
@@ -206,15 +199,7 @@
                                             </div>
                                         </a>
                                     </div>
-                                    <div class="col">
-                                        <a href="#" target="_blank">
-                                            <div class="link-card cards">
-                                                <i class="iconfont icon-music-list"></i>
-                                                <span class="link-name">音乐</span>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
+                             
                                 <!--第二组-->
                                 <div class="row" style="margin-top: 1.5rem;">
                                     <div class="col">
@@ -222,14 +207,6 @@
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-a-daohangzhiyindingwei-05"></i>
                                                 <span class="link-name">起始页</span>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="col 2">
-                                        <a href="#" target="_blank">
-                                            <div class="link-card cards">
-                                                <i class="iconfont icon-z_shangpinheji"></i>
-                                                <span class="link-name">网址集</span>
                                             </div>
                                         </a>
                                     </div>
