--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 <script>
                     document.write(' - ' + (new Date()).getFullYear())
                 </script>&nbsp;<a href="#"></a>&nbsp;&amp;&nbsp;
-                Made&nbsp;by&nbsp;<a href="#" target="_blank">个人主页</a>
+                StarCloud&nbsp;by&nbsp;<a href="#" target="_blank">个人主页</a>
             </div>
             <!-- 歌词显示 -->
             <div id="lrc"></div>
