--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                             <!--介绍信息-->
                             <div class="message cards" id="switchmore">
                                 <div class="des" id="des"><i class="iconfont icon-yinhao-copy-copy"></i>
-                                    <div class="des-title"><span id="change">Hello&nbsp;World&nbsp;!</span><br /><span
-                                            id="change1">一个建立于 21 世纪的小站，奇偶猫</span></div>
+                                    <div class="des-title"><span id="change">Hello&nbsp;!</span><br /><span
+                                            id="change1">StarCloud 网址https://user.starn.vip</span></div>
                                     <i class="iconfont icon-yinhao-copy"></i>
                                 </div>
                             </div>
