--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                             </div>
                             <!--社交链接-->
                             <div class="social" id="social">
+                                <a href="https://user.starn.vip" class="link" id="StarCloud" target="_blank">
+                                    <i class="iconfont icon-cloud"></i>
+                                </a>
                                 <a href="#" class="link" id="github" target="_blank">
                                     <i class="iconfont icon-github"></i>
                                 </a>
