--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                             </div>
                             <!--社交链接-->
                             <div class="social" id="social">
-                                <a href="https://user.starn.vip" class="link" id="StarCloud" target="_blank">
-                                    <i class="iconfont icon-cloud"></i>
-                                </a>
+                                        <a href="https://user.starn.vip" target="_blank">
+                                                <i class="iconfont icon-blog-solid"></i>
+                                                <span class="link-name">前往StarCloud</span>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                                         <a href="https://user.starn.vip" target="_blank">
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-blog-solid"></i>
-                                                <span class="link-name">StarCloud</span>
+                                                <span class="link-name">前往StarCloud</span>
                                             </div>
                                         </a>
                                     </div>
@@ -188,7 +188,7 @@
                                         <a href="https://chat.starm.cc" target="_blank">
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-cloud"></i>
-                                                <span class="link-name">StarAI</span>
+                                                <span class="link-name">前往StarAI</span>
                                             </div>
                                         </a>
                                     </div>
