--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                             <div class="social" id="social">
                                 <a href="https://user.starn.vip" target="_blank">
                                 <span class="link-name">前往StarCloud</span>
+                                <a href="https://chat.starm.cc" target="_blank">
+                                <span class="link-name">前往StarAI</span>                                    
                             </div>
                         </div>
                     </div>
