--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
                                 <a href="https://user.starn.vip" target="_blank">
                                 <span class="link-name">前往StarCloud</span>                                    
                     </div>
+                    </div>
+                        
                     <!--第二屏 Logo-->
                     <div class="logo cards" style="display: none" id="changemore">
                         <a class="logo-text">new.starn.cc</a>
