--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <span class="link-name">前往StarCloud</span>                                    
                     </div>
                     </div>
-                        
+                    </div>   
                     <!--第二屏 Logo-->
                     <div class="logo cards" style="display: none" id="changemore">
                         <a class="logo-text">new.starn.cc</a>
