--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                             <div class="message cards" id="switchmore">
                                 <div class="des" id="des"><i class="iconfont icon-yinhao-copy-copy"></i>
                                     <div class="des-title"><span id="change">Hello&nbsp;!</span><br /><span
-                                            id="change1">StarCloud 网址https://user.starn.vip</span></div>
+                                            id="change1">StarCloud 网址https://user.starm.cc</span></div>
                                     <i class="iconfont icon-yinhao-copy"></i>
                                 </div>
                             </div>
                             <!--社交链接-->
                             <div class="social" id="social">
-                                <a href="https://user.starn.vip" target="_blank">
+                                <a href="https://user.starm.cc" target="_blank">
                                 <span class="link-name">前往StarCloud</span>                                    
                     </div>
                     </div>
@@ -176,7 +176,7 @@
                                 <!--第一组-->
                                 <div class="row">
                                     <div class="col">
-                                        <a href="https://user.starn.vip" target="_blank">
+                                        <a href="https://user.starm.cc" target="_blank">
                                             <div class="link-card cards">
                                                 <i class="iconfont icon-blog-solid"></i>
                                                 <span class="link-name">前往StarCloud</span>
